fix(firefox): fix missing tabs on firefox
Fix problem with overflow: auto that made the tab-bar disappear on firefox

--- a/src/styles/specifics/timetracking/regtime/__regtime.sass
+++ b/src/styles/specifics/timetracking/regtime/__regtime.sass
@@ -366,8 +366,5 @@ uni-file-import input
     width: 100%
     height: 2rem
 
-.horizontal_nav 
-    overflow: auto
-
-    li
-        white-space: nowrap
+.horizontal_nav li
+    white-space: nowrap
